# Backup-Utility

./: .gitignore  README.md  pyproject.toml
src/backup_cli/: __init__.py  cli.py  logging_utils.py
src/backup_cli/ops/: __init__.py  archive.py  copy.py  verify.py
tests/: test_smoke.py
